Mar 06, 2015 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.10

Feb 18, 2015 - chris ---------------------------------------------------
o When reading records from mmapped storage, a pointer into the storage
	is returned and the record data is no longer copied

Feb 16, 2015 - chris ---------------------------------------------------
o The page cache eviction was moved to a background thread

Feb 03, 2015 - chris ---------------------------------------------------
o Default compilation flag is now -O3

Jan 23, 2015 - chris ---------------------------------------------------
o Fixed FreeBSD compilation errors (thanks, Heping Wen)

Jan 22, 2015 - chris ---------------------------------------------------
o Added Cursor.TryFind to hamsterdb-dotnet
	(thanks, mjmckp <matthew.j.m.peacock@gmail.com>)

Jan 12, 2015 - chris ---------------------------------------------------
o issue #46: fixed segfault in approx. matching (thanks, Joel
	Jacobson)

Jan 09, 2015 - chris ---------------------------------------------------
o issue #45: fixed segfault in Journal recovery (thanks, Michael
	Moellney)

Jan 02, 2015 - chris ---------------------------------------------------
o issue #44: approx. matching returned the wrong key (thanks, Joel
	Jacobson)

Dec 30, 2014 - chris ---------------------------------------------------
o issue #43: fixed segfault when flushing transactions (thanks, Joel
	Jacobson)

Dec 15, 2014 - chris ---------------------------------------------------
o Implemented ham_cursor_get_record_size() for remote access

Dec 12, 2014 - chris ---------------------------------------------------
o Deprecated HAM_RECORD_NUMBER (use HAM_RECORD_NUMBER64 instead);
	introduced a new flag HAM_RECORD_NUMBER32 for 32bit record numbers

Dec 05, 2014 - chris ---------------------------------------------------
o Added a new parameter HAM_PARAM_POSIX_FADVISE (thanks, Thomas Fähnle)
