@@ -1675,11 +1675,6 @@ TEST_CASE("Approx/greaterThanTest1", "") {
   f.greaterThanTest1();
 }
 
-TEST_CASE("Approx/issue52Test", "") {
-  ApproxFixture f;
-  f.issue52Test();
-}
-
 TEST_CASE("Approx/greaterThanTest2", "") {
   ApproxFixture f;
   f.greaterThanTest2();
