@@ -1,3 +1,6 @@
+May 04, 2015 - chris ---------------------------------------------------
+o issue #53: fixed race condition on Win32
+
 Mar 06, 2015 - chris ---------------------------------------------------
                       release of hamsterdb-2.1.10
 
